ajustes no fluxo de login