@@ -1,6 +1,7 @@
 package com.cstock.controller;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -11,7 +12,6 @@ import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
-import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpSession;
 
 @Controller
@@ -22,6 +22,9 @@ public class DemoAuthController {
     @Value("${app.frontend-url}")
     private String frontendUrl;
 
+    @Value("${oauth.client-id}")
+    private String clientId;
+
     public DemoAuthController(AuthenticationManager authenticationManager) {
         this.authenticationManager = authenticationManager;
     }
@@ -30,27 +33,33 @@ public class DemoAuthController {
     public String demoLogin(
             @RequestParam("code_challenge") String codeChallenge,
             @RequestParam(value = "code_challenge_method", defaultValue = "S256") String method,
-            HttpServletRequest request,
             HttpSession session) {
 
         try {
             Authentication auth = authenticationManager.authenticate(
-                    new UsernamePasswordAuthenticationToken("recruiter@demo.com", "123456")
+                    new UsernamePasswordAuthenticationToken(
+                            "recruiter@demo.com",
+                            "123456"
+                    )
             );
 
             SecurityContextHolder.getContext().setAuthentication(auth);
             session.setAttribute("SPRING_SECURITY_CONTEXT", SecurityContextHolder.getContext());
 
-            String redirectUri = URLEncoder.encode(frontendUrl + "/callback", "UTF-8");
+            String redirectUri = URLEncoder.encode(
+                    frontendUrl + "/callback",
+                    StandardCharsets.UTF_8
+            );
 
-            return "redirect:/oauth2/authorize?" +
-                    "response_type=code&client_id=cstock-ui" +
+            return "redirect:/oauth2/authorize" +
+                    "?response_type=code" +
+                    "&client_id=" + clientId +
                     "&scope=openid%20profile%20read%20write" +
-                    "&code_challenge=" + URLEncoder.encode(codeChallenge, "UTF-8") +
+                    "&code_challenge=" + URLEncoder.encode(codeChallenge, StandardCharsets.UTF_8) +
                     "&code_challenge_method=" + method +
                     "&redirect_uri=" + redirectUri;
 
-        } catch (Exception e) {
+        } catch (Exception ex) {
             return "redirect:" + frontendUrl + "?error=true";
         }
     }
